[gd_scene load_steps=36 format=2]

[ext_resource path="res://Box.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/NewInputManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/LabelChooser.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PlayerStats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Xeaus.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 72 )

[sub_resource type="Animation" id=25]
resource_name = "24H"
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/24H/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}

[sub_resource type="Animation" id=27]
resource_name = "24M"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:in24M")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/24M/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=19]
resource_name = "26H"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/26H/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:in26MH")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=22]
resource_name = "26L"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:in26L")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=21]
resource_name = "26M"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:in26MH")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=15]
resource_name = "2L"
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/2L/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "2M"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/2M/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}

[sub_resource type="Animation" id=24]
resource_name = "4H"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/4H/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "4M"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/4M/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "5L"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/5L/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "5M"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/5M/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "6L"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/6L/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "6M"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/6M/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/5L/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/5M/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/2M/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D/6M/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Position2D/4M/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Position2D/2L/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Position2D/6L/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:state")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Position2D/26H/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath(".:in26MH")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath(".:in26L")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Position2D/4H/CollisionShape2D:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Position2D/24H/CollisionShape2D:disabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath(".:in24M")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Position2D/24M/CollisionShape2D:disabled")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 72 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 50, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 8 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 37.3205, 8 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 58, 8 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 49.0476, 8 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 52.5992, 8 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 42.265, 8 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 48, 56 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 88, 44 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 24, 24 )

[node name="Xeaus" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.26498e-06, 0 )
scale = Vector2( 1.3913, 2.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/24H = SubResource( 25 )
anims/24M = SubResource( 27 )
anims/26H = SubResource( 19 )
anims/26L = SubResource( 22 )
anims/26M = SubResource( 21 )
anims/2L = SubResource( 15 )
anims/2M = SubResource( 10 )
anims/4H = SubResource( 24 )
anims/4M = SubResource( 14 )
anims/5L = SubResource( 5 )
anims/5M = SubResource( 8 )
anims/6L = SubResource( 18 )
anims/6M = SubResource( 11 )
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="LabelChooser" parent="." instance=ExtResource( 4 )]

[node name="PlayerStats" parent="." instance=ExtResource( 5 )]

[node name="NewInputManager" parent="." instance=ExtResource( 3 )]

[node name="Position2D" type="Position2D" parent="."]

[node name="5M" parent="Position2D" instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="Position2D/5M" index="0"]
position = Vector2( 72, -24 )
shape = SubResource( 7 )
disabled = true

[node name="5L" parent="Position2D" instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" parent="Position2D/5L" index="0"]
position = Vector2( 56, -32 )
shape = SubResource( 3 )
disabled = true

[node name="2M" parent="Position2D" instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="Position2D/2M" index="0"]
position = Vector2( 56.0718, 44.6603 )
rotation = 0.523599
shape = SubResource( 9 )
disabled = true

[node name="6M" parent="Position2D" instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="Position2D/6M" index="0"]
position = Vector2( 80, -8 )
rotation = 0.174533
shape = SubResource( 12 )
disabled = true

[node name="4M" parent="Position2D" instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="Position2D/4M" index="0"]
position = Vector2( 64.5019, -51.0945 )
rotation = -0.349066
shape = SubResource( 13 )
disabled = true

[node name="2L" parent="Position2D" instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="Position2D/2L" index="0"]
position = Vector2( 68.1206, 55.316 )
rotation = 0.174533
shape = SubResource( 16 )
disabled = true

[node name="6L" parent="Position2D" instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="Position2D/6L" index="0"]
position = Vector2( 49.8112, 34.1585 )
rotation = 0.872665
shape = SubResource( 17 )
disabled = true

[node name="26H" parent="Position2D" instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="Position2D/26H" index="0"]
position = Vector2( 48, -32 )
shape = SubResource( 20 )
disabled = true

[node name="4H" parent="Position2D" instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="Position2D/4H" index="0"]
position = Vector2( 72, 16 )
shape = SubResource( 23 )
disabled = true
one_way_collision_margin = 0.0

[node name="24H" parent="Position2D" instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="Position2D/24H" index="0"]
position = Vector2( 120, 12 )
shape = SubResource( 26 )
disabled = true

[node name="24M" parent="Position2D" instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="Position2D/24M" index="0"]
position = Vector2( -40, -32 )
shape = SubResource( 28 )
disabled = true

[connection signal="Circle24T1" from="NewInputManager" to="." method="_on_NewInputManager_Circle24T1"]
[connection signal="Circle24T2" from="NewInputManager" to="." method="_on_NewInputManager_Circle24T2"]
[connection signal="Circle24T3" from="NewInputManager" to="." method="_on_NewInputManager_Circle24T3"]
[connection signal="Circle26T1" from="NewInputManager" to="." method="_on_NewInputManager_Circle26T1"]
[connection signal="Circle26T2" from="NewInputManager" to="." method="_on_NewInputManager_Circle26T2"]
[connection signal="Circle26T3" from="NewInputManager" to="." method="_on_NewInputManager_Circle26T3"]
[connection signal="Dash" from="NewInputManager" to="." method="_on_NewInputManager_Dash"]
[connection signal="Dp623T3" from="NewInputManager" to="." method="_on_NewInputManager_Dp623T3"]
[connection signal="Move2" from="NewInputManager" to="." method="_on_NewInputManager_Move2"]
[connection signal="Move4" from="NewInputManager" to="." method="_on_NewInputManager_Move4"]
[connection signal="Move5" from="NewInputManager" to="." method="_on_NewInputManager_Move5"]
[connection signal="Move6" from="NewInputManager" to="." method="_on_NewInputManager_Move6"]
[connection signal="Move7" from="NewInputManager" to="." method="_on_NewInputManager_Move7"]
[connection signal="Move8" from="NewInputManager" to="." method="_on_NewInputManager_Move8"]
[connection signal="Move9" from="NewInputManager" to="." method="_on_NewInputManager_Move9"]
[connection signal="Normal2T1" from="NewInputManager" to="." method="_on_NewInputManager_Normal2T1"]
[connection signal="Normal2T2" from="NewInputManager" to="." method="_on_NewInputManager_Normal2T2"]
[connection signal="Normal4T2" from="NewInputManager" to="." method="_on_NewInputManager_Normal4T2"]
[connection signal="Normal4T3" from="NewInputManager" to="." method="_on_NewInputManager_Normal4T3"]
[connection signal="Normal6T1" from="NewInputManager" to="." method="_on_NewInputManager_Normal6T1"]
[connection signal="Normal6T2" from="NewInputManager" to="." method="_on_NewInputManager_Normal6T2"]
[connection signal="T1" from="NewInputManager" to="." method="_on_NewInputManager_T1"]
[connection signal="T2" from="NewInputManager" to="." method="_on_NewInputManager_T2"]
[connection signal="T3" from="NewInputManager" to="." method="_on_NewInputManager_T3"]

[editable path="Hurtbox"]
[editable path="Position2D/5M"]
[editable path="Position2D/5L"]
[editable path="Position2D/2M"]
[editable path="Position2D/6M"]
[editable path="Position2D/4M"]
[editable path="Position2D/2L"]
[editable path="Position2D/6L"]
[editable path="Position2D/26H"]
[editable path="Position2D/4H"]
[editable path="Position2D/24H"]
[editable path="Position2D/24M"]
